# MS01_Project_1

./: .gitignore  CMakeLists.txt  README.md  main.cpp
solvers/: constants.hpp  jacobi_MPI.cpp  jacobi_MPI.hpp  jacobi_seq.cpp  jacobi_seq.hpp  jacobi_sequential.cpp  jacobi_sequential.hpp
study_cases/jacobi_sequential_asymptotic_accuracy/: main.cpp
study_cases/jacobi_sequential_asymptotic_accuracy/results/: JacobiSequential_log.csv  jacobi_sequential_asymptotic_accuracy.csv  jacobi_sequential_asymptotic_accuracy_dont_overwrite.csv  visualize_accuracy.py  visualize_accuracy_3D.py  visualize_accuracy_with_dots.py
utils/: Vector.cpp  Vector.hpp
